VZDEV/src/objects/CCPM_DynamicCampaignSMS__mdt.object
<CustomObject>
    <description>Contains Dynamic values to be encoded into the SMS for Campaigns</description>
    <fields>
        <fullName>CCPM_CampaignName__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_campaignSMSDate__c</fullName>
        <description>This field stores the date value to be populated in the SMS</description>
        <label>Campaign SMS Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_dynamicURL__c</fullName>
        <description>Stores the Dynamic URL values for a campaign</description>
        <label>Dynamic URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Dynamic Values for Campaign SMS</label>
    <pluralLabel>Dynamic Values for Campaign SMS</pluralLabel>
</CustomObject>